tests/basic/bad/test15.pepa
% File: tests/bad/test15.pepa
% Missing rate definition
P = (a, r).P;
(P <> P)
